--- a/app/templates/kiosk/_panel.html
+++ b/app/templates/kiosk/_panel.html
@@ -19,7 +19,7 @@
           data-status="{{ status }}"
           data-should-confirm="{{ 'true' if status == 'ENTRADA' else 'false' }}"
         >
-          ->] Registrar entrada
+          🚪⬅️ Registrar entrada
         </button>
       </form>
 
@@ -38,7 +38,7 @@
           data-status="{{ status }}"
           data-should-confirm="{{ 'true' if status == 'SALIDA' else 'false' }}"
         >
-          [-> Registrar salida
+          🚪➡️ Registrar salida
         </button>
       </form>
     </div>
@@ -50,9 +50,9 @@
           {% for event in recent_events %}
             <li>
               {% if event.type.value == 'IN' %}
-                Entrada - {{ event.ts }}
+                Entrada - {{ event.ts.strftime("%H:%M:%S") }}
               {% else %}
-                Salida - {{ event.ts }}
+                Salida - {{ event.ts.strftime("%H:%M:%S") }}
               {% endif %}
             </li>
           {% endfor %}
