Add shifts route and refactor team_today template to include sections

--- a/app/templates/admin/team_today.html
+++ b/app/templates/admin/team_today.html
@@ -2,7 +2,8 @@
 
 {% block content %}
   <section class="card">
-    <h1>Team today</h1>
+    {% include "admin/_sections.html" %}
+    <h1>Turnos</h1>
     <table>
       <thead>
         <tr>
@@ -25,4 +26,3 @@
     </table>
   </section>
 {% endblock %}
-
