--- a/app/templates/admin/employees.html
+++ b/app/templates/admin/employees.html
@@ -2,6 +2,7 @@
 
 {% block content %}
   <section class="card">
+    {% include "admin/_sections.html" %}
     <h1>Employees</h1>
     <p><a href="{{ url_for('admin.employees_new') }}">Create employee</a></p>
     <table>
@@ -26,4 +27,3 @@
     </table>
   </section>
 {% endblock %}
-
